<resources>
    <string name="app_name">QR Code 2018</string>
    <string name="category_create">Tạo mã QR</string>
    <string name="category_scan">Nội dung mã QR vừa quét là:</string>
    <string name="category_scan2">Nội dung mã QR vừa quét là:</string>
    <string name="category_about">Thông tin về tác giả</string>
    <string name="save_btn">Save</string>
    <string name="share_btn">Share</string>
    <string name="scan_btn">Quét mã QR từ Máy ảnh</string>
    <string name="scan_btn2">Quét mã QR từ Ảnh</string>
    <string name="gen_btn">Tạo mã QR</string>
    <string name="about_btn">Thông tin</string>
    <string name="create_btn">Tạo mã</string>
    <string name="exit_btn">Thoát</string>
</resources>
