<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_02"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/create_btn"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_rounded_corner"
            android:drawableRight="@drawable/ic_create_white_36dp"
            android:elevation="6dp"
            android:fontFamily="@font/utmmobifonekt"
            android:stateListAnimator="@null"
            android:text="@string/gen_btn"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:translationZ="4dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="429dp" />

        <Button
            android:id="@+id/scan_btn2"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:background="@drawable/btn_rounded_corner"
            android:drawableRight="@drawable/ic_photo_white_36dp"
            android:elevation="6dp"
            android:fontFamily="@font/utmmobifonekt"
            android:stateListAnimator="@null"
            android:text="@string/scan_btn2"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:translationZ="4dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="429dp" />

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="230dp"
            android:background="@drawable/btn_rounded_corner"
            android:drawableRight="@drawable/ic_photo_camera_white_36dp"
            android:elevation="6dp"
            android:fontFamily="@font/utmmobifonekt"
            android:stateListAnimator="@null"
            android:text="@string/scan_btn"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:translationZ="4dp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="429dp" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="135dp"
            android:background="@drawable/btn_rounded_corner"
            android:drawableRight="@drawable/ic_info_outline_white_36dp"
            android:elevation="6dp"
            android:fontFamily="@font/utmmobifonekt"
            android:stateListAnimator="@null"
            android:text="@string/about_btn"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:translationZ="4dp"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="429dp" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_rounded_corner"
            android:drawableRight="@drawable/ic_exit_to_app_white_36dp"
            android:elevation="6dp"
            android:fontFamily="@font/utmmobifonekt"
            android:stateListAnimator="@null"
            android:text="@string/exit_btn"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:translationZ="4dp"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="429dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>